Started upload project

--- a/website/templates/stored-xss.html
+++ b/website/templates/stored-xss.html
@@ -13,14 +13,18 @@
                 <div class="card-body">
                     <h5 class="card-title">{{product.name}}</h5>
                     <div class="product-rating">
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
+                        {% for i in range(1, 6) %}
+                            {% if i <= product.rating|floor %}
+                                <i class="bi bi-star-fill"></i>
+                            {% elif i == product.rating|ceil and product.rating % 1 != 0 %}
+                                <i class="bi bi-star-half"></i>
+                            {% else %}
+                                <i class="bi bi-star"></i>
+                            {% endif %}
+                        {% endfor %}
                     </div>
                     <p class="product-price">{{product.price}}$</p>
-                    <a href="{{ url_for('views.request_product', productId=product.id) }}" class="btn btn-primary">View details</a>
+                    <a href="{{ url_for('stored_xss.product_requested', productId=product.id) }}" class="btn btn-primary">View details</a>
                 </div>
             </div>
         </div>
